--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
     color: #222222;
+    background-color: whitesmoke;
 }
 
 #banner {
@@ -10,9 +11,18 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 10%;
-    width: 10%;
+    height: 12%;
+    width: 12%;
     padding-top: 40px;
+    padding-bottom: 10px;
+}
+
+#myInfo {
+    color: #222222;
+    text-align: center;
+    font-family: 'Genos', sans-serif;
+    margin-top: 0px;
+    margin-bottom: -5px;
 }
 
 .row {
