--- a/main.css
+++ b/main.css
@@ -1,8 +1,21 @@
+* {
+    box-sizing: border-box;
+}
+html, body, div, img {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
 body {
     color: #222222;
     background-color: whitesmoke;
     font-family: 'Genos', sans-serif;
     margin: 0;
+    line-height: 1;
 }
 
 nav {
@@ -10,6 +23,8 @@ nav {
     text-decoration: none;
     font-weight: 700;
     font-size: 20px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 .clear{
@@ -17,23 +32,24 @@ nav {
 }
 
 .wrapper {
+    /* margin-left: 40px;
+    margin-right: 40px; */
     min-height: 100%;
-  
     /* Equal to height of footer */
     /* But also accounting for potential margin-bottom of last child */
     margin-bottom: -50px;
   }
 
-  .push {
-    height: 50px;
-  }
+.push {
+height: 50px;
+}
 
-  .footer {
-    height: 50px;
-    background-color: white;
-	color: #222222;
-	text-align: center;
-  }
+.footer {
+height: 50px;
+background-color: #222222;
+color: #ffffff;
+text-align: center;
+}
 
 .footer-left {
     float: left;
@@ -121,13 +137,42 @@ header {
     object-fit: cover;
   }
 
-/* .lower img{
-    margin-top: 18px;
-    vertical-align: middle;
+.container{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 1.5rem;
+    margin: 90px;
+}
+
+.tile img{
     width: 100%;
-    height: 90%;
-    object-fit: contain;
-  } */
+    height: 100%;
+    object-fit: cover;
+}
+
+.tile:nth-child(1),
+.tile:nth-child(7){
+    grid-column: span 4;
+    grid-row: span 2;
+}
+
+.tile:nth-child(2),
+.tile:nth-child(3){
+    grid-column: span 2;
+}
+
+.tile:nth-child(4),
+.tile:nth-child(5),
+.tile:nth-child(8),
+.tile:nth-child(9){
+    grid-column: span 3;
+}
+
+.tile:nth-child(6){
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
   
   /* Responsive layout - makes a two column-layout instead of four columns */
   @media screen and (max-width: 800px) {
@@ -144,3 +189,12 @@ header {
       max-width: 100%;
     }
   }
+
+  @media screen and (max-width: 650px){
+    .container{
+        display: block;
+    }
+    .tile{
+        margin-bottom: 1rem;
+    }
+}
