--- a/main.css
+++ b/main.css
@@ -72,10 +72,18 @@ header {
     margin-bottom: 25px;
 }
 
-#logo {
+/* #logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    height: 11%;
+    width: 11%;
+    padding-top: 40px;
+    padding-bottom: 10px;
+    align-items: center;
+} */
+
+#logo {
     height: 11%;
     width: 11%;
     padding-top: 40px;
@@ -97,6 +105,66 @@ header {
     margin-top: 3px;
     margin-bottom: -5px;
 }
+
+#jeffTitle h1 {
+    color: #222222;
+    text-align: center;
+    font-family: 'Genos', sans-serif;
+    margin-top: 0px;
+    margin-bottom: -10px;
+    font-size: 125px;
+}
+
+#jeffTitle p {
+    color: #222222;
+    text-align: center;
+    font-family: 'Genos', sans-serif;
+    margin-top: 5px;
+    font-size: 30px;
+    margin-bottom: 50px;
+}
+
+#modalImg:hover {opacity: 0.7;}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  }
+
+.modal-content {
+margin: auto;
+display: block;
+width: 80%;
+max-width: 700px;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
 
 .caption {
     position: relative;
@@ -141,7 +209,9 @@ header {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-gap: 1.5rem;
-    margin: 90px;
+    margin-left: 90px;
+    margin-right: 90px;
+    margin-bottom: 65px;
 }
 
 .tile img{
@@ -173,9 +243,10 @@ header {
     grid-row: span 2;
 }
 
+
   
   /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 800px) {
+@media screen and (max-width: 800px) {
     .column {
       flex: 50%;
       max-width: 50%;
@@ -183,14 +254,14 @@ header {
   }
   
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .column {
       flex: 100%;
       max-width: 100%;
     }
   }
 
-  @media screen and (max-width: 650px){
+@media screen and (max-width: 650px){
     .container{
         display: block;
     }
@@ -198,3 +269,19 @@ header {
         margin-bottom: 1rem;
     }
 }
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+}
+  
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+  
+@media only screen and (max-width: 700px){
+    .modal-content {
+      width: 100%;
+    }
+  }
