--- a/main.css
+++ b/main.css
@@ -72,17 +72,6 @@ header {
     margin-bottom: 25px;
 }
 
-/* #logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 11%;
-    width: 11%;
-    padding-top: 40px;
-    padding-bottom: 10px;
-    align-items: center;
-} */
-
 #logo {
     height: 11%;
     width: 11%;
@@ -124,20 +113,28 @@ header {
     margin-bottom: 50px;
 }
 
-#modalImg:hover {opacity: 0.7;}
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+#modalImg:hover {
+    opacity: 0.7;
+}
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.9); 
   }
 
 .modal-content {
@@ -157,14 +154,21 @@ max-width: 700px;
     transition: 0.3s;
   }
   
-  .close:hover,
-  .close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
+.close:hover,
+.close:focus {
+color: #bbb;
+text-decoration: none;
+cursor: pointer;
+}
+
+  @keyframes zoom {
+    from {
+      transform: scale(0)
+    }
+    to {
+      transform: scale(1)
+    }
   }
-
-
 
 .caption {
     position: relative;
@@ -280,7 +284,7 @@ max-width: 700px;
     to {transform:scale(1)}
 }
   
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 700px) {
     .modal-content {
       width: 100%;
     }
