--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ header {
     margin-bottom: -5px;
 }
 
-#jeffTitle h1 {
+#pageTitle h1 {
     color: #222222;
     text-align: center;
     font-family: 'Genos', sans-serif;
@@ -104,7 +104,7 @@ header {
     font-size: 125px;
 }
 
-#jeffTitle p {
+#pageTitle p {
     color: #222222;
     text-align: center;
     font-family: 'Genos', sans-serif;
@@ -169,6 +169,11 @@ cursor: pointer;
       transform: scale(1)
     }
   }
+
+#stanceSite {
+  width: 100%;
+}
+
 
 .caption {
     position: relative;
