--- a/main.css
+++ b/main.css
@@ -174,6 +174,13 @@ cursor: pointer;
   width: 100%;
 }
 
+#stanceLogos {
+  width: 100%;
+  padding-left: 90px;
+  padding-right: 90px;
+}
+
+
 
 .caption {
     position: relative;
