--- a/main.css
+++ b/main.css
@@ -174,23 +174,25 @@ cursor: pointer;
   width: 100%;
 }
 
-#stanceLogos {
-  width: 100%;
-  padding-left: 90px;
-  padding-right: 90px;
+.stanceLogos {
+  margin-left: 90px;
+  margin-right: 90px;
 }
 
-/* row */
 .stancePampContainer {
   display: flex;
+  margin-left: 90px;
+  margin-right: 90px;
+  margin-top: 50px;
 }
 
-/* column */
 .stancePamp {
   flex: 50%;
-  padding: 5px;
 }
 
+.pampImg1 {
+  padding-right: 20px;
+}
 
 
 .caption {
