edited class names

--- a/main.css
+++ b/main.css
@@ -179,7 +179,7 @@ cursor: pointer;
   margin-right: 90px;
 }
 
-.stancePampContainer {
+.stanceContainer {
   display: flex;
   margin-left: 90px;
   margin-right: 90px;
@@ -192,6 +192,10 @@ cursor: pointer;
 
 .pampImg1 {
   padding-right: 20px;
+}
+
+.stancePosterContainer {
+  margin-top: 50px;
 }
 
 
