--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ nav {
     margin-bottom: 25px;
 }
 
+
 .clear{
     height: 100px;
 }
@@ -46,6 +47,10 @@ height: 50px;
 
 .nav {
   margin-top: 50px;
+}
+
+.nav a:hover {
+  opacity: 65%;
 }
 
 .footer {
@@ -277,6 +282,10 @@ cursor: pointer;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.lftgPageImg {
+  margin-bottom: 1.5rem;
 }
 
 .containerLftg{
